--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <div class="text-parent">
+        <h1 class="text-child">this is cool</h1>
+    </div>
     <div class="holiday-parent">
         <div class="holiday-gallery">
-            <img src="media/tree.jpg" alt="" class="holiday tree">
+            <img src="media/tree.jpg" alt="" class="holiday diwali">
             <img src="media/card.jpg" alt="" class="holiday christmas">
             <img src="media/lantern.jpg" alt="" class="holiday china">
 
         </div>
 
-    </divcla>
+    </div>
     
 </body>
 </html>
