--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
     <div class="text-parent">
         <h1 class="text-child">this is cool</h1>
+        <h2 class="text-grow">woah</h2>
     </div>
+
+    <div class="build-parent">
+        <div class="build-child">
+            <img src="media/lourve.jpg" alt="" class="build-image">
+            <div class="build-middle">
+                <div class="build-text">how lourvely!</div>
+            </div>
+        </div>
+
+    </div>
+
     <div class="holiday-parent">
         <div class="holiday-gallery">
             <img src="media/tree.jpg" alt="" class="holiday diwali">
