--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <title>Hover Effect</title>
 </head>
 <body>
     <div class="text-parent">
@@ -21,6 +22,10 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="button-parent">
+        <button class="button-child">click me</button>
     </div>
 
     <div class="holiday-parent">
