--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         <button class="button-child">click me</button>
     </div>
 
+    <div id="circle-container">
+        <div id="cc">
+            <div class="circle" id="five"></div>
+            <div class="circle" id="four"></div>
+            <div class="circle" id="three"></div>
+            <div class="circle" id="two"></div>
+            <div class="circle" id="one"></div>
+        </div>
+
+    </div>
+
     <div class="holiday-parent">
         <div class="holiday-gallery">
             <img src="media/tree.jpg" alt="" class="holiday diwali">
