--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
             <div class="circle" id="four"></div>
             <div class="circle" id="three"></div>
             <div class="circle" id="two"></div>
-            <div class="circle" id="one"></div>
+            <div class="circle" id="one">Hover Me!</div>
+        </div>
+
+    </div>
+
+    <div class="label-parent">
+        <div id="label-child">
+            <div class="label" id="label1">Hover</div>
+            <div class="label" id="label2">this</div>
+
         </div>
 
     </div>
