--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
     </div>
 
+    <div class="animation-parent">
+        <p id="animation-child">frozen 2 was a good movie</p>
+    </div>
+
     <div class="holiday-parent">
         <div class="holiday-gallery">
             <img src="media/tree.jpg" alt="" class="holiday diwali">
